logs/2025-10-20/session_20251020_113803/errors.log
[2025-10-20 11:38:04] === 严重错误 ===
[2025-10-20 11:38:04] 类型: SyntaxError
[2025-10-20 11:38:04] 消息: unterminated string literal (detected at line 961) (settings_panel.py, line 961)
[2025-10-20 11:38:04] 堆栈追踪:
Traceback (most recent call last):
  File "C:\Users\15052\Desktop\BioNexus\BioNexus_1.2.21\main.py", line 151, in <module>
    from ui.main_window import MainWindow
  File "C:\Users\15052\Desktop\BioNexus\BioNexus_1.2.21\ui\main_window.py", line 35, in <module>
    from .settings_panel import SettingsPanel
  File "C:\Users\15052\Desktop\BioNexus\BioNexus_1.2.21\ui\settings_panel.py", line 961
    self.tr("{0} has been updated to:
            ^
SyntaxError: unterminated string literal (detected at line 961)

[2025-10-20 11:38:04] ============================================================
